--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -48,12 +48,12 @@
                 android:fontFamily="@font/roboto_bold"
                 android:text="@string/teknisi_laptop"
                 android:textSize="14sp"
-                app:layout_constraintBottom_toBottomOf="@+id/iv_laptop"
-                app:layout_constraintStart_toEndOf="@+id/iv_laptop"
-                app:layout_constraintTop_toTopOf="@+id/iv_laptop" />
+                app:layout_constraintBottom_toBottomOf="@+id/iv_booking_layanan"
+                app:layout_constraintStart_toEndOf="@+id/iv_booking_layanan"
+                app:layout_constraintTop_toTopOf="@+id/iv_booking_layanan" />
 
             <ImageView
-                android:id="@+id/iv_laptop"
+                android:id="@+id/iv_booking_layanan"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
                 android:layout_marginTop="8dp"
@@ -94,9 +94,9 @@
                 android:layout_marginTop="24dp"
                 android:text="@string/status"
                 android:textSize="12sp"
-                app:layout_constraintEnd_toEndOf="@+id/iv_laptop"
-                app:layout_constraintStart_toStartOf="@+id/iv_laptop"
-                app:layout_constraintTop_toBottomOf="@id/iv_laptop" />
+                app:layout_constraintEnd_toEndOf="@+id/iv_booking_layanan"
+                app:layout_constraintStart_toStartOf="@+id/iv_booking_layanan"
+                app:layout_constraintTop_toBottomOf="@id/iv_booking_layanan" />
 
             <Button
                 style="@style/ButtonLogin"
