--- a/app/src/main/res/layout/activity_notification.xml
+++ b/app/src/main/res/layout/activity_notification.xml
@@ -17,12 +17,12 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/tb_notification_toolbar"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:elevation="0dp"
             app:navigationIcon="@drawable/back"
-            app:title="Notifikasi"
-            />
+            app:title="Notifikasi" />
 
     </com.google.android.material.appbar.AppBarLayout>
 
