--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/detail_oerder"
     tools:context=".ui.Order.DetailOrderActivity">
 
 
@@ -98,17 +99,36 @@
                 app:layout_constraintStart_toStartOf="@+id/iv_booking_layanan"
                 app:layout_constraintTop_toBottomOf="@id/iv_booking_layanan" />
 
-            <Button
-                style="@style/ButtonLogin"
-                android:layout_width="wrap_content"
-                android:layout_height="40dp"
-                android:layout_marginEnd="38dp"
-                android:text="@string/process"
-                android:textSize="11sp"
-                app:cornerRadius="10dp"
+
+            <androidx.cardview.widget.CardView
+                android:id="@+id/cv_process"
+                android:layout_width="90dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="35dp"
+                app:cardBackgroundColor="@color/purple"
+                app:cardCornerRadius="10dp"
                 app:layout_constraintBottom_toBottomOf="@+id/tv_status"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="@+id/tv_status" />
+                app:layout_constraintTop_toTopOf="@+id/tv_status">
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent">
+
+                    <TextView
+                        android:id="@+id/tv_desc_process"
+                        style="@style/TextSubHead"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
+                        android:textAlignment="center"
+                        android:textColor="@color/white"
+                        android:fontFamily="@font/roboto_bold"
+                        android:text="@string/process"
+                        android:textSize="16sp"
+                         />
+
+                </LinearLayout>
+            </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
                 android:id="@+id/cardView1"
