--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:id="@+id/detail_oerder"
-    tools:context=".ui.Order.DetailOrderActivity">
+    tools:context=".ui.order.DetailOrderActivity">
 
 
     <com.google.android.material.appbar.AppBarLayout
