Mengubah warna button

--- a/app/src/main/res/layout/item_my_order.xml
+++ b/app/src/main/res/layout/item_my_order.xml
@@ -51,12 +51,12 @@
                 android:layout_width="wrap_content"
                 android:layout_height="40dp"
                 android:layout_marginEnd="30dp"
-                android:textStyle="bold"
-                android:backgroundTint="@drawable/button_style1"
+                android:backgroundTint="@color/purple"
                 android:backgroundTintMode="screen"
                 android:text="@string/konfirmasi_pesanan"
                 android:textAllCaps="false"
                 android:textSize="9sp"
+                android:textStyle="bold"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
