--- a/app/src/main/res/layout/activity_detail_order.xml
+++ b/app/src/main/res/layout/activity_detail_order.xml
@@ -19,6 +19,7 @@
         app:layout_constraintTop_toTopOf="parent">
 
         <com.google.android.material.appbar.MaterialToolbar
+            android:id="@+id/topDetailOrder"
             android:layout_width="match_parent"
             android:layout_height="?attr/actionBarSize"
             android:elevation="0dp"
@@ -77,7 +78,7 @@
                 app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
-                android:id="@+id/info_invoice"
+                android:id="@+id/tv_detail_order_id"
                 style="@style/TextSubHead"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -172,7 +173,7 @@
                         app:layout_constraintTop_toTopOf="parent" />
 
                     <TextView
-                        android:id="@+id/textView2"
+                        android:id="@+id/tv_detail_order_idteknisi"
                         style="@style/TextSubHead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -299,6 +300,19 @@
                 android:textSize="12sp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@id/cardView1" />
+
+            <TextView
+                android:id="@+id/tv_detail_order_desc_judul"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="30dp"
+                android:layout_marginTop="16dp"
+                android:text="@string/deskripsi_tugas"
+                android:textSize="12sp"
+                android:textStyle="bold"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toBottomOf="@+id/tv_alamat_lokasi" />
+
             <TextView
                 android:id="@+id/tv_rumahku"
                 android:layout_width="wrap_content"
@@ -357,7 +371,7 @@
                 android:textSize="14sp"
                 android:textStyle="bold"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@+id/tv_alamat_lokasi" />
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_order_deskripsi_tugas" />
 
             <androidx.recyclerview.widget.RecyclerView
                 android:id="@+id/rv_status"
@@ -386,6 +400,17 @@
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/rv_status" />
+
+            <TextView
+                android:id="@+id/tv_detail_order_deskripsi_tugas"
+                style="@style/TextDesc"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="8dp"
+                android:textSize="11sp"
+                app:layout_constraintEnd_toEndOf="@+id/tv_jam"
+                app:layout_constraintStart_toStartOf="@+id/tv_alamat_lokasi"
+                app:layout_constraintTop_toBottomOf="@+id/tv_detail_order_desc_judul" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
