--- a/app/src/main/res/layout/activity_pay_order.xml
+++ b/app/src/main/res/layout/activity_pay_order.xml
@@ -88,7 +88,7 @@
                         app:layout_constraintTop_toBottomOf="@+id/tanggal_info" />
 
                     <TextView
-                        android:id="@+id/info_invoice"
+                        android:id="@+id/tv_detail_order_id"
                         style="@style/TextSubHead"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
@@ -109,7 +109,7 @@
                         android:text="@string/perbaikan_layar_laptop"
                         android:textSize="12sp"
                         app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintTop_toBottomOf="@id/info_invoice" />
+                        app:layout_constraintTop_toBottomOf="@id/tv_detail_order_id" />
 
                     <TextView
                         android:id="@+id/tanggal_info"
