--- a/app/src/main/res/layout/bottom_sheet_dialog_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_layout.xml
@@ -1,31 +1,40 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    app:cardCornerRadius="30dp"
+    app:cardElevation="0dp">
 
 
-    <ImageView
-        android:id="@+id/iv_classification"
-        android:layout_width="260dp"
-        android:layout_height="266dp"
-        android:layout_marginTop="24dp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        tools:srcCompat="@tools:sample/avatars" />
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content">
 
-    <TextView
-        android:id="@+id/tv_classification"
-        android:layout_width="278dp"
-        android:layout_height="79dp"
-        android:layout_marginTop="32dp"
-        android:text="@string/tv_label_classification"
-        android:textSize="18sp"
-        android:textColor="@color/purple"
-        android:gravity="center"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/iv_classification" />
-</androidx.constraintlayout.widget.ConstraintLayout>
+        <ImageView
+            android:id="@+id/iv_classification"
+            android:layout_width="260dp"
+            android:layout_height="150dp"
+            android:layout_marginTop="32dp"
+            android:elevation="0dp"
+            android:scaleType="centerCrop"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:srcCompat="@tools:sample/avatars" />
+
+        <TextView
+            android:id="@+id/tv_classification"
+            android:layout_width="278dp"
+            android:layout_height="79dp"
+            android:layout_marginTop="32dp"
+            android:gravity="center"
+            android:text="@string/tv_label_classification"
+            android:textColor="@color/purple"
+            android:textSize="18sp"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/iv_classification" />
+    </androidx.constraintlayout.widget.ConstraintLayout>
+</androidx.cardview.widget.CardView>
