menambah chat seperti materi di android realtime databes dicoding intermediate

--- a/app/src/main/res/layout/activity_chat.xml
+++ b/app/src/main/res/layout/activity_chat.xml
@@ -11,7 +11,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_alignParentBottom="true"
-        android:background="@color/firebase_gray"
+        android:background="@color/bg_gray"
         android:orientation="horizontal"
         android:paddingHorizontal="10dp">
 
