--- a/app/src/main/res/layout/bottom_sheet_dialog_layout.xml
+++ b/app/src/main/res/layout/bottom_sheet_dialog_layout.xml
@@ -26,15 +26,27 @@
 
         <TextView
             android:id="@+id/tv_classification"
-            android:layout_width="278dp"
-            android:layout_height="79dp"
-            android:layout_marginTop="32dp"
+            style="@style/TextSubHead"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="24dp"
             android:gravity="center"
             android:text="@string/tv_label_classification"
-            android:textColor="@color/purple"
             android:textSize="18sp"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/iv_classification" />
+
+        <TextView
+            android:id="@+id/textView2"
+            style="@style/TextSubHead"
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
+            android:gravity="center"
+            android:text="Segera Hubungi Teknisi Untuk Memperbaiki!!"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toBottomOf="@+id/tv_classification" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </androidx.cardview.widget.CardView>
