--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -35,7 +35,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:autofillHints=""
-            android:hint="@string/username"
+            android:hint="@string/text_label_email"
             android:inputType="textEmailAddress"
             android:textSize="12sp"
             app:expandedHintEnabled="false" />
@@ -119,7 +119,7 @@
         android:layout_marginTop="40dp"
         android:layout_marginEnd="50dp"
         android:fontFamily="@font/roboto_bold"
-        android:text="@string/username"
+        android:text="@string/text_label_email"
         android:textSize="14sp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
