--- a/app/src/main/res/layout/fragment_finishorder.xml
+++ b/app/src/main/res/layout/fragment_finishorder.xml
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
+     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context="ui.order.FinishorderFragment">
@@ -9,6 +9,8 @@
         android:id="@+id/rv_finish_order"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:listitem="@layout/item_finish_order" />
+        tools:listitem="@layout/item_my_order" >
+
+    </androidx.recyclerview.widget.RecyclerView>
 
 </FrameLayout>
